tree-sitter-jairs/grammar.js
    source_file: ($) => repeat($._item),

    // -----------------------------------------------------------------------
    // Items (top-level)
    // -----------------------------------------------------------------------
    _item: ($) =>
      choice(
        $.import_decl,
        $.scope_decl,
        $.run_decl,
        $._decl,
      ),

    // `#scope_module` / `#scope_export` — a bare directive with no argument and no `;`, marking a
    // *position* in the file rather than declaring anything (ADR-0054 §1). Matched on its **text**
    // rather than as a `$.directive` with a precedence: a `prec(3)` made *every* bare directive a
    // scope marker and stranded `#run`'s expression, because every directive lexes as one token.
    import_decl: ($) =>
      prec(
        2,
        seq(field("directive", $.directive), field("path", $.string_literal), ";"),
      ),

    // #run expr;  (top-level, executed for side effects)
    run_decl: ($) =>
      prec(
        1,
        seq(field("directive", $.directive), field("expr", $._expr), ";"),
      ),

    // -----------------------------------------------------------------------
    // Declarations
    // -----------------------------------------------------------------------
    _decl: ($) => choice($.const_decl, $.operator_decl, $.var_decl),

    // operator + :: (a: T, b: T) -> T { … } (ADR-0048 §1).
    //
    // Its own rule rather than a `const_decl` whose name is an operator: `name` is an
    // `identifier` and an operator is not one, so sharing would require loosening `name` for
    // every declaration. The *value* is an ordinary `proc`, because an overload is an ordinary
    // procedure whose name happens to be an operator.
    //
    // Every operator token the compiler's parser accepts is listed, including the ones sema then
    // refuses (ADR-0048 §2): the grammar's job is to produce the tree so a highlighter can colour
    // `operator +%` while the compiler explains why it is not allowed.
    const_decl: ($) =>
      choice(
        seq(
          field("name", $.name),
          "::",
          field("value", $._const_value),
        ),
        seq(
          field("name", $.name),
          ":",
          field("type", $._type),
          ":",
          field("value", $._const_value),
        ),
      ),

    // name := expr;
    // name : Type ;
    // name : Type = expr ;   (expr includes uninit_expr for `---`)
    var_decl: ($) =>
      choice(
        seq(
          field("name", $.name),
          ":=",
          field("value", $._expr),
          ";",
        ),
        seq(
          // `using q: Point;` promotes (ADR-0050 §1). Only the typed form takes it: promotion
          // needs the field list, so the compiler refuses `using q := f()` (E0128).
          optional("using"),
          field("name", $.name),
          ":",
          field("type", $._type),
          optional(seq("=", field("value", $._expr))),
          ";",
        ),
      ),

    // -----------------------------------------------------------------------
    // Const values (right-hand side of ::)
    // -----------------------------------------------------------------------
    _const_value: ($) =>
      choice(
        $.struct_type,
        $.union_type,
        $.variant_type,
        $.enum_type,
        $.proc,
        seq($._expr, ";"),
      ),

    // -----------------------------------------------------------------------
    // Procedures
    // -----------------------------------------------------------------------
    proc: ($) =>
      seq(
        field("params", $.param_list),
        optional(field("ret_type", $.ret_type)),
        // `#c_call` (ADR-0057 §3) and `#no_abc` (ADR-0058 §3), in either order — a `repeat`, not two
        // `optional`s, because the compiler accepts both orderings and a fixed order would make one
        // spelling an ERROR node while the other parsed.
        repeat(field("attr", $._proc_attr)),
        choice(
          field("body", $.block),
          seq(field("foreign", $.foreign_attr), ";"),
        ),
      ),

    _proc_attr: ($) =>
      choice(
        $.c_call_attr,
        $.no_abc_attr,
        $.must_attr,
        $.c_variadic_attr,
        $.expand_attr,
        $.modify_attr,
        $.note,
      ),

    // #c_call (ADR-0057 §3)
    param_list: ($) =>
      seq(
        "(",
        optional(
          seq(
            $.param,
            repeat(seq(",", $.param)),
            optional(","),
          ),
        ),
        ")",
      ),

    // param: name ':' type — no field() on name to keep S-expr clean
    param: ($) =>
      seq(
        // `using p: Point` promotes the type's fields (ADR-0050 §1). Only the typed form takes it.
        optional("using"),
        // `$N: s64` — a comptime-value parameter, polymorphic over a compile-time-known value
        // (ADR-0087 §1). The `$` precedes the *name*, distinguishing it from a `$T` in type position
        // (a `poly_type`): this marks the parameter, its type annotation is ordinary.
        optional("$"),
        $.identifier,
        ":",
        // `args: ..T` — a variadic parameter (ADR-0138 §1). The `..` precedes the type;
        // the callee sees the parameter as `[]T`.
        optional(".."),
        field("type", $._type),
        // `= 10` — a literal default (ADR-0053 §2). Any expression parses; sema refuses a
        // non-literal, with a message saying why.
        optional(seq("=", field("default", $._expr))),
      ),

    // `-> T`, `-> (T, U)` (a results list, ADR-0052 §1), or `-> (T) -> U` (a proc-pointer return,
    // ADR-0059 §3). The last two both begin `(`; the `->` after the `)` decides, and GLR explores
    // both until it appears.
    ret_type: ($) =>
      seq("->", field("type", choice($.result_list, $._type))),

    // `(T, U, …)` after `->` (ADR-0052 §1). A one-element list interns to the element itself, so
    // `-> (T)` and `-> T` are the same type — normalised in `jr-pool`, not refused here.
    foreign_attr: ($) =>
      seq(
        field("directive", $.directive),
        field("lib", $.identifier),
        optional(field("symbol", $.string_literal)),
      ),

    // -----------------------------------------------------------------------
    // Types
    // -----------------------------------------------------------------------
    _type: ($) =>
      choice(
        $.pointer_type,
        $.array_type,
        $.vector_type,
        $.view_type,
        $.dynamic_array_type,
        $.name_type,
        $.poly_type,
        $.struct_type,
        $.union_type,
        $.variant_type,
        $.enum_type,
        $.proc_type,
      ),

    // (T, T) -> T — a procedure-pointer type (ADR-0059 §3).
    //
    // In return position this collides with `result_list`: both begin `(`, and only the `->` after
    // the closing `)` tells them apart. tree-sitter's GLR resolves it on its own (a declared
    // conflict was tried and `generate` reported it unnecessary). The parameter list is its own node
    // so the return type is not mistaken for a last parameter.
    pointer_type: ($) => seq("*", field("inner", $._type)),

    // [N]T — a fixed-size array (ADR-0039 §3).
    //
    // The length is an *expression*, matching the compiler's parser: `[COUNT]u8` must parse
    // so that sema can be the thing that refuses it, rather than the grammar deciding a
    // semantic question. `[..]T` is deliberately absent here as well, because the compiler
    // refuses it (E0124) and a grammar that accepted it would highlight a type the compiler
    // rejects.
    name_type: ($) =>
      seq(
        $.identifier,
        optional(seq(".", field("member", $.identifier))),
        optional(field("arguments", $.type_arguments)),
      ),

    // (s64) or (s64, bool) after a type name — the arguments of a parameterised type.
    poly_type: ($) => seq("$", optional("$"), $.identifier),

    // enum { RED; GREEN :: 5; } (ADR-0041).
    //
    // A *type*, like `struct_type`, because ADR-0012 makes `Colour :: enum { … }` an instance
    // of the one `name :: value` constant form. `member_list` and `member` are their own
    // nodes rather than reusing `field_list`/`field`: a field has a type and a member has an
    // optional value, so sharing would make a highlight query unable to tell them apart.
    // `enum` or `enum_flags` (ADR-0043 §1). One node kind rather than two, matching the
    // compiler's parser: the two forms differ only in numbering and permitted operators, and a
    // second node kind would make every consumer handle both.
    struct_type: ($) =>
      seq(
        "struct",
        optional(field("params", $.struct_type_params)),
        // `#soa(N)` — one array per field (ADR-0147 §1), after the parameter list so the two things
        // read in the order they are decided: what the type is parameterised over, then how it is
        // stored.
        optional(field("soa", $.soa_attr)),
        field("fields", $.field_list),
      ),

    // #soa(N) (ADR-0147 §1)
    field_list: ($) => seq("{", repeat($.field), "}"),

    // struct field: `name : type ;`, or `using name : type ;` to embed (ADR-0050 §1).
    //
    // The layout attributes `#align N` and `#place N` follow the type (ADR-0144 §1), repeated and
    // in any order — the parser loops over them for the same reason, since an ordering rule no
    // reader could predict is worse than none.
    field: ($) =>
      seq(
        optional("using"),
        $.identifier,
        ":",
        field("type", $._type),
        repeat(field("attr", $._field_attr)),
        ";",
      ),

    _field_attr: ($) => choice($.align_attr, $.place_attr),

    // #align N — the field's alignment is at least N bytes (ADR-0144 §3).
    block: ($) => seq("{", repeat($._stmt), "}"),

    _stmt: ($) =>
      choice(
        $.block,
        $.if_stmt,
        $.while_stmt,
        $.for_stmt,
        $.defer_stmt,
        $.push_context_stmt,
        $.code_stmt,
        $.switch_stmt,
        $.return_stmt,
        $.break_stmt,
        $.continue_stmt,
        $.decl_stmt,
        $.destructuring_stmt,
        $.assign_stmt,
        $.expr_stmt,
      ),

    // A declaration used as a statement.
    decl_stmt: ($) => $._decl,

    // if cond Body (else (if_stmt | Body))?
    //
    // `then` is accepted only on the braceless branch. Keeping it inside that choice makes
    // `if cond then { … }` an ERROR node instead of a second spelling for an ordinary block.
    if_stmt: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $._expr),
          choice(
            field("body", $.block),
            seq(optional("then"), field("body", $._single_stmt)),
          ),
          optional(
            seq(
              "else",
              field("else_branch", choice($.if_stmt, $._body)),
            ),
          ),
        ),
      ),

    // while cond Body
    while_stmt: ($) =>
      seq(
        "while",
        field("condition", $._expr),
        field("body", $._body),
      ),

    // Body = Block | single Stmt (braces optional per corpus 010)
    _body: ($) => choice($.block, $._single_stmt),

    // Statements that can appear without braces after if/while.
    // Excludes block (already handled) and decl_stmt (ambiguous without braces).
    _single_stmt: ($) =>
      choice(
        $.if_stmt,
        $.while_stmt,
        $.for_stmt,
        $.defer_stmt,
        $.return_stmt,
        $.break_stmt,
        $.continue_stmt,
        $.destructuring_stmt,
        $.assign_stmt,
        $.expr_stmt,
      ),

    // `for x: iter { }`, `for x, i: iter { }`, `for < x: iter { }` (ADR-0049 §1), and
    // `for iter { }` — the nameless form where `it` and `it_index` are injected as
    // ordinary locals in the body (ADR-0133). The nameless form has no `:` between the
    // `for` and the iterable; the named form has one, so the two shapes are unambiguous.
    // An optional label (`outer: for …`) precedes either form.
    defer_stmt: ($) => seq("defer", field("body", $._single_stmt)),

    // `switch e { … }` and Jai's exact `if #complete e == { … }` spelling share one editor node,
    // matching the compiler CST and HIR. The high precedence on the complete-if form makes its `==`
    // the delimiter rather than part of the scrutinee's top-level binary expression; a comparison
    // remains usable when parenthesised.
    //
    // Cases repeat first and the optional `else` is separate and final. This makes an arm after
    // `else` an ERROR node rather than accepting it and leaving a later phase to reorder it.
    return_stmt: ($) =>
      seq(
        "return",
        optional(seq(field("value", $._expr), repeat(seq(",", field("value", $._expr))))),
        ";",
      ),

    // `break;`, `break outer;` (ADR-0049 §2), and likewise for continue.
    break_stmt: ($) => seq("break", optional(field("label", $.identifier)), ";"),

    continue_stmt: ($) => seq("continue", optional(field("label", $.identifier)), ";"),

    // `q, ok := f();` and `q, ok = f();` (ADR-0052 §2). A `_` is an ordinary identifier in Jairs, so
    // a discard needs no separate rule — lowering recognises the text.
    assign_stmt: ($) =>
      seq(
        field("lhs", $._expr),
        field("op", $._assign_op),
        field("rhs", $._expr),
        ";",
      ),

    // expr ;
    _assign_op: (_$) =>
      choice(
        "=",
        "+=",
        "-=",
        "*=",
        "/=",
        "%=",
        "+%=",
        "-%=",
        "*%=",
        // ADR-0042 §6.
        "&=",
        "|=",
        "^=",
        "<<=",
        ">>=",
      ),

    // -----------------------------------------------------------------------
    // Expressions — precedence (lowest to highest)
    //   -1. directive expressions (run_expr, directive_expr) — lowest
    //    1. ||
    //    2. &&
    //    3. == != < <= > >=
    //    4. + - +% -%
    //    5. * / % *%
    //    6. prefix - ! * (address-of)
    //    7. postfix .field  .*  (args)  [index]
    // -----------------------------------------------------------------------
    _expr: ($) =>
      choice(
        $.binary_expr,
        $.unary_expr,
        $.deref_expr,
        $.field_expr,
        $.array_literal,
        $.index_expr,
        $.slice_expr,
        $.call_expr,
        $.paren_expr,
        $.literal_expr,
        $.name_expr,
        $.context_expr,
        $.range_expr,
        $.uninit_expr,
        $.cast_expr,
        $.autocast_expr,
        $.member_expr,
        $.run_expr,
        $.directive_expr,
      ),

    // Binary expressions with explicit precedence levels.
    unary_expr: ($) =>
      prec.right(
        6,
        seq(
          field("op", choice("-", "!", "*", "~")),
          field("operand", $._expr),
        ),
      ),

    // Postfix dereference: expr.*
    deref_expr: ($) =>
      prec.left(
        7,
        seq(field("operand", $._expr), ".*"),
      ),

    // Indexing: expr[index] (ADR-0039 §5).
    //
    // Precedence 7, the same as `.field`, `.*` and a call, so `a[i].x` and `a.b[i]` chain
    // left-to-right the way the compiler's postfix loop builds them.
    field_expr: ($) =>
      prec.left(
        7,
        seq(
          field("operand", $._expr),
          ".",
          field("field", $.identifier),
        ),
      ),

    // Function call: expr(args)
    call_expr: ($) =>
      prec.left(
        7,
        seq(
          field("function", $._expr),
          field("args", $.arg_list),
        ),
      ),

    literal_expr: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.string_literal,
        $.true,
        $.false,
        $.null,
      ),

    // Name reference
    run_expr: ($) =>
      prec.right(
        -1,
        seq(field("directive", $.directive), field("expr", $._expr)),
      ),

    // Bare directive with no argument (e.g. a future #no_abc annotation).
    // Lowest precedence.
